kubernetes/apps/ml-system/dask/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dask
spec:
  ingressClassName: internal
  rules:
    - host: dask.goyangi.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dask-cluster-scheduler
                port:
                  number: 8787
